--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 * {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 0px;
@@ -30,7 +30,7 @@ h1 {
 }
 /* form style */
 input {
-    width:fit-content;
+    width:70%;
     font-size: 22px;
     padding: 10px 5px;
     margin: 20px auto;
@@ -39,14 +39,20 @@ label {
     font-size: 30px;    
     font-weight: bold;
 }
+form p {
+    font-size: 20px;
+    margin: 20px 10px;
+    line-height: 1.5;
+    text-align: justify;
+}
+
 button {
     background:rgb(245, 245, 245);
     font-size: 24px;
     font-weight: bolder;
-    width: 50%;
-    padding: 5px;
-    margin-top: 20px;
-    margin-left: 25px;
+    width: 70%;
+    padding: 10px 5px;
+    margin: 20px auto;
     color: rgb(10, 15, 15);
 }
 .form-box {
@@ -58,6 +64,13 @@ button {
 }
 .search-history{
     width:30%;
+}
+.section-title{
+    width: 70%;
+    margin: 20px 10px;
+    padding: 10px 5px;
+    background-color: rgba(152, 172, 201, 0.4);
+    text-align: center;
 }
 .forecasts {
     width:60%;
