duplicate search caught, past search button set up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,13 @@ button {
 .current-weather {
     width:60%;
     height: 250px;   
+    text-align: justify;
+    line-height: 1.5;
 }
+.current-weather h3 {
+width: 25%
+}
+
 .search-history{
     width:30%;
 }
