--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     margin-left: 5px;
@@ -10,19 +9,24 @@ body {
     background-size: cover;
     background-repeat:repeat-y;
 }
-
 header {
     background-image: linear-gradient(to right, rgb(151, 201, 235), rgb(6, 43, 68));
     margin-top: 0;
 }
-
+.section-title{
+    color:whitesmoke;
+    background-color: #CAA8A4 ;
+    width: 65%;
+    margin: 20px 10px;
+    padding: 10px 5px;
+    text-align: center;
+}
 h1 {
     color: white;
     text-align: center;
     padding: 10px 5px;
     width: 100%;
 }
-
 .flex-container {
     display: flex;
     flex-wrap: wrap;
@@ -59,25 +63,29 @@ button {
     width:30%;
 }
 .current-weather {
-    width:60%;
-    height: 250px;   
-    text-align: justify;
+    width:60%; 
+    text-align: auto;
     line-height: 1.5;
 }
-.current-weather h3 {
-width: 25%
+.current-weather h2, h3{
+width: 50%;
+margin-left: 100px;
 }
-
+.current-weather p {
+    background-color: whitesmoke;
+    text-align: center;
+    width: 30%;
+    margin-left: 20%;
+}
 .search-history{
     width:30%;
 }
-.section-title{
-    width: 70%;
-    margin: 20px 10px;
-    padding: 10px 5px;
-    background-color: rgba(152, 172, 201, 0.4);
-    text-align: center;
-}
 .forecasts {
-    width:60%;
+    width: 60%;
+}
+.cards {
+    line-height: 1.8;
+    font-size: 20px;
+    font-weight: bolder;
+    opacity: 0.85;
 }
