--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@ header {
     margin-top: 0;
 }
 .section-title{
-    color:whitesmoke;
-    background-color: #CAA8A4 ;
+    color:rgb(34, 30, 30);
+    background-color: #c3cdd3 ;
     width: 65%;
     margin: 20px 10px;
     padding: 10px 5px;
